--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,7 @@ apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'org.spongepowered.mixin'
 
-sourceCompatibility = '1.8'
-targetCompatibility = '1.8'
+sourceCompatibility = targetCompatibility = '1.8'
 
 version = '1.0.0'
 
@@ -87,7 +86,7 @@ mixin {
 jar {
     manifest.attributes(
             'TweakClass': 'org.spongepowered.asm.launch.MixinTweaker',
-            'FMLCorePlugin': 'com.envyful.mixins.MixinsCoreMod',
+            'FMLCorePlugin': 'com.envyful.mixins.magic.hot.MixinsCoreMod',
             'FMLCorePluginContainsFMLMod': 'true'
     )
 }
